--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 clap = { version = "3.2.20", features = ["derive"] }
 glium = "0.32.1"
 image = { version = "0.24.2", default-features = false, features = ["png"] }
-raytracer = { path = "./raytracer" }
+raytracer = { path = "./raytracer", features = ["serde"] }
+serde = { version = "1.0.144" }
+serde_json = "1.0"
