Add shadows, gamma correction and antialiasing

--- a/raytracer/Cargo.toml
+++ b/raytracer/Cargo.toml
@@ -10,6 +10,7 @@ itertools = "0.10.3"
 nalgebra = "0.31.1"
 image = { version = "0.24.2", default-features = false, features = ["png"] }
 serde = { version = "1.0.144", optional = true, features = ["derive"] }
+fastrand = "1.8.0"
 
 [features]
 default = ["serde"]
