--- a/raytracer/Cargo.toml
+++ b/raytracer/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+panic = "abort"
+
 [dependencies]
 itertools = "0.10.3"
 nalgebra = "0.31.1"
